--- a/style.css
+++ b/style.css
@@ -1,54 +1,57 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-a{
-    color: #fff;
-    text-decoration: none;
-    transition: 0,3s;
+.nav-list  a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0, 3s;
 }
 
-a:hover{
-   opacity: 0.7s;;
+.nav-list a:hover {
+  opacity: 0.7s;
+  ;
 }
 
-.logo{
-    font-size: 24px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
+.logo {
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: #000;
-    height: 8vh;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: #000;
+  height: 8vh;
 }
 
-.nav-list{
-    z-index: 2;
-    list-style: none;
-    display: flex;
+.nav-list {
+  z-index: 2;
+  list-style: none;
+  display: flex;
 }
+
 .nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
+  letter-spacing: 3px;
+  margin-left: 32px;
 }
 
-.mobile-menu{
-    display: none;
-    cursor: pointer;
+.mobile-menu {
+  display: none;
+  cursor: pointer;
 }
 
-.mobile-menu div{
-    width: 32px;
-    height: 2px;
-    background: #fff;
-    margin: 8px;
-    transition: 0.3s;
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: #fff;
+  margin: 8px;
+  transition: 0.3s;
 }
 
 
@@ -58,171 +61,592 @@ nav{
 
 
 
-section{
-    padding: 100px 20px;
-  }
-  
-  .home{
-    position: relative;
-    width: 100%;
-    min-height: 2vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background: #48a7cc;
-    z-index: 1;
-  }
+section {
+  padding: 35px 20px;
+}
 
-  .home::before{
-    z-index: 777;
-    content: '';
-    position: absolute;
-    background: rgba(226, 251, 3, 0.3);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-     
-  }
+.home {
+  padding: 35px;
+  position: relative;
+  width: 100%;
+  min-height: 2vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background: #48a7cc;
+  z-index: 1;
+}
 
-  .home .content{
-    z-index: 888;
-    color: #fff;
-    width: 70%;
-    margin-top: 5px;
-  }
+.home::before {
+  z-index: 777;
+  content: '';
+  position: absolute;
+  background: rgba(226, 251, 3, 0.3);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 
-  .home .content h1{
-    font-size: 3em;
-    font-weight: 900;
-    text-transform: uppercase;
-    list-style: 75Px;
-    margin-bottom: 10px;
-  }
+}
 
-  .home .content h1 span {
-    font-size: 0.5em;
-    font-weight: 600;
-  }
+.home .content {
+  padding: 35px;
+  z-index: 888;
+  color: #fff;
+  width: 70%;
+  margin-top: 5px;
+}
 
-  .home .content p {
-    margin-bottom: 50px;
-  }
+.home .content h1 {
+  font-size: 3em;
+  font-weight: 900;
+  text-transform: uppercase;
+  list-style: 75Px;
+  margin-bottom: 10px;
+}
 
-  .home .content button{
-    font-size:larger;
-    background: #fff;
-    padding: 15px 35px;
-    color: #000000;
-    font-size: 1.1em;
-    font-weight: 500;
-    text-decoration: none;
-    border-radius: 15px;
-    
-  }
+.home .content h1 span {
+  font-size: 0.5em;
+  font-weight: 600;
+}
 
-  .home .media-icons{
-    z-index: 888;
-    position: absolute;
-    right: 30px;
-    display: flex;
-    flex-direction: column;
-    transition: 0.5s ease;
-  }
+.home .content p {
+  margin-bottom: 50px;
+}
 
-  .home ,.media-icons a{
-    color: #fff;
-    font-size: 1.6em;
-    transition: 0.3s ease;
-  }
+.home .content button {
+  font-size: larger;
+  background: #fff;
+  padding: 15px 35px;
+  color: #000000;
+  font-size: 1.1em;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 15px;
 
-  .home .media-icons a:not(:last-child){
-    margin-bottom: 20px;
-  }
-  .home .media-icons a:hover{
-    transform: scale(1.3);
-  }
+}
+
+.home .media-icons {
+  z-index: 888;
+  position: absolute;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s ease;
+}
+
+.home,
+.media-icons a {
+  color: #fff;
+  font-size: 1.6em;
+  transition: 0.3s ease;
+}
+
+.home .media-icons a:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.home .media-icons a:hover {
+  transform: scale(1.3);
+}
 
 .home video {
-     z-index: 000;
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
+  z-index: 000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*card*/
+
+.container {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 40px 0;
+}
+
+.container .card {
+  position: relative;
+  width: 250px;
+  height: 300px;
+  background: rgba(255, 255, 255, 0.05);
+  margin: 20px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+}
+
+.container .card .content {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: 0.5s;
+}
+
+.container .card:hover .content {
+  transform: translateY(-20px);
+}
+
+.container .card .content .imgBx {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+
+.container .card .content .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.container .card .content .contentBx h3 {
+  color: #000;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: 18px;
+  text-align: center;
+  margin: 20px 0 10px;
+  line-height: 1.1em;
+}
+
+.container .card .content .contentBx h3 span {
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: initial;
+}
+
+.container .card .sci {
+  position: absolute;
+  bottom: 50px;
+  display: flex;
+}
+
+.container .card .sci li {
+  list-style: none;
+  margin: 0 10px;
+  transform: translateY(40px);
+  transition: 0.5s;
+  opacity: 0;
+}
+
+.container .card:hover .sci li {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.container .card .sci li a {
+  color: #000;
+  font-size: 10px;
+}
+
+
+
+/*barra das ongs*/
+
+.about {
+  width: 100%;
+  height: 100vh;
+  padding: 10px 0;
+  display: flex;
+  position: relative;
+}
+
+.about .about_main {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.image img {
+  width: 70%;
+  margin-left: 30px;
+}
+
+.about .about_main image img {
+  width: 888px;
+  position: relative;
+  top: 60px;
+}
+
+.row {
+  display: flex;
+  position: relative;
+  width: 90%;
+  height: 60%;
+  margin-left: 4rem;
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.about .about_main .about_text h1 span {
+  color: #c41818;
+  margin-right: 15px;
+  font-family: mv boli;
+}
+
+.about .about_main .about_text h1 {
+  font-size: 55px;
+  position: relative;
+  bottom: 50px;
+}
+
+.about .about_main .about_text h3 {
+  font-size: 30;
+  margin: 10px;
+}
+
+.about .about_main .about_text p {
+  width: 650px;
+  text-align: justify;
+  margin-right: 30px;
+  line-height: 22px;
+}
+
+.about .about_btn {
+  background: #c41818;
+  padding: 12px 25px;
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  left: 70%;
+  margin-top: 30px;
+}
+
+
+/*card*/
+main.cards {
+  display: flex;
+  padding: 32px;
+}
+
+main.cards section.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: white;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  max-height: 468px;
+  margin-left: 32px;
+}
+
+main.cards section.card:first-child {
+  margin-left: 0;
+}
+
+main.cards section.card .icon {
+  width: 64px;
+  height: 64px;
+}
+
+main.cards section.card img {
+  width: 100%;
+}
+
+main.cards section.card h3 {
+  font-size: 100%;
+  margin: 16px 0;
+}
+
+main.cards section.card span {
+  font-weight: 300;
+  max-width: 240px;
+  font-size: 80%;
+  margin-bottom: 16px;
+}
+
+main.cards section.card button {
+  padding: 0.5rem 1rem;
+  text-transform: uppercase;
+  border-radius: 32px;
+  border: 0;
+  cursor: pointer;
+  font-size: 80%;
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 16px 0;
+}
+
+main.cards section.card.contact button {
+  background: linear-gradient(to right, #9F66FF, #DFCBFF);
+}
+main.cards section.card.shop button {
+  background: linear-gradient(to right, #3E8AFF, #BBDEFF);
+}
+main.cards section.card.about button {
+  background: linear-gradient(to right, #FE5F8F, #FFC7D9);
+}
+
+main.cards section.card.contact {
+  box-shadow: 20px 20px 50px -30px #DBC4FF;
+}
+main.cards section.card.shop {
+  box-shadow: 20px 20px 50px -30px #AFD6FF;
+}
+main.cards section.card.about {
+  box-shadow: 20px 20px 50px -30px #FFC1D5;
+}
+
+@media screen and (max-width: 720px) {
+  main.cards {
+      flex-direction: column;
   }
 
+  main.cards section.card {
+      margin-left: 0;
+      margin-bottom: 32px;
+  }
 
-  /*responsivo*/
+  main.cards section.card:last-child {
+      margin-bottom: 0;
+  }
+
+  main.cards section.card button {
+      font-size: 70%;
+  }
+
+}
+ 
 
 
-  @media (max-width: 998px) {
-    body{
-        overflow-x: hidden;
-    }
-    .nav-list{
-        position: absolute;
-        top: 8vh;
-        right: 0;
-        width: 50vw;
-        height: 92vh;
-        background: #000;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        transform: translateX(100%);
-        transition: transform 0.3s ease-in;
-    }
-    .nav-list li {
-        margin-left: 0;
-        opacity: 0;
-    }
-     
-    .mobile-menu{
-        display: block;
+/*footer*/
 
-    }
+main {
+   height: 80vh;
+}
+
+footer {
+  width: 100%;
+  color:#fff;
+}
+
+
+
+.footer-link{
+  text-decoration: none;
+}
+
+#footer_content{
+  background-color: #2c2c2c;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1 {
+  margin-bottom: 0.7rem ;
+}
+
+#footer_midia{
+  display: flex;
+  gap: 2rem;
+  margin-top: 1.5rem;
+}
+#footer_midia .footer-link i{
+  font-size: 1.25rem;
+}
+
+#footer_midia .footer-link {
+  display:flex ;
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  width: 2.5rem;
+  color: #fff;
+  border-radius: 50%;
+  transition: all 0.4s;
+}
+
+#footer_midia .footer-link:hover {
+  opacity: 0.8;
+
+}
+
+#instagram {
+  background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+  background-color: #4267b3;
+
+}
+
+#twitter {
+  background-color: #0055ff;
+} 
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  list-style: none;
+}
+
+.footer-list .footer-link {
+  color: #9494948e;
+}
+
+.footer-list .footer-link:hover {
+  color: #7f37c9;
+}
+
+#footer_cadastro{
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+#footer_cadastro p {
+  color: #9494948e;
+}
+
+#input_group {
+  display: flex;
+  align-items: center;
+  background-color: #222222;
+  border-radius: 4px;
+}
+
+#input_group input{
+  all: unset;
+  padding: 0.75rem;
+  width: 100%;
+}
+
+#input_group button{
+  background-color: #ccca48;
+  border: none;
+  color: #000000;
+  padding: 0px 1.25rem;
+  font-size: 1.125rem;
+  height: 100%;
+  border-radius: 0px 4px 4px 0px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+#input_group button:hover {
+  opacity: 0.8;
+}
+
+#footer_copyright{
+  display: flex;
+  justify-content: center;
+  background-color: #00000060;
+  font-size: 0.9rem;
+  padding: 1.5rem;
+  font-weight: 100;
+  
+
+}
+
+
+/*responsivo*/
+
+
+@media (max-width: 998px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #000;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+
+  .mobile-menu {
+    display: block;
+
+  }
 }
 
 .nav-list.active {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 @keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .mobile-menu.active .line1 {
-    transform: rotate(-45deg) translate(-8px, 8px);
-  }
-  
-  .mobile-menu.active .line2 {
-    opacity: 0;
-  }
-  
-  .mobile-menu.active .line3 {
-    transform: rotate(45deg) translate(-5px, -7px);
-  }
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-5px, -7px);
+}
 
 
-  @media (max-width: 1040px){
-     
-    section{
-        padding: 100px 20px;
+@media (max-width: 1040px) {
+
+  section {
+    padding: 100px 20px;
+  }
+
+  .home .media-icons {
+    right: 15px;
+  }
+}
+
+/*footer*/
+
+@media screen and (max-width: 768px) {
+    #footer_content{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
     }
+}
 
-    .home .media-icons{
-        right: 15px;
-    }
+@media screen and (max-width: 42px){
+  #footer_content{
+    grid-template-columns: repeat(1, 1fr);
+    padding: 3rem 2rem;
   }
-
-
- 
+}
