--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  text-decoration: none;
 }
 
 .nav-list  a {
@@ -11,7 +13,6 @@
 
 .nav-list a:hover {
   opacity: 0.7s;
-  ;
 }
 
 .logo {
@@ -55,15 +56,12 @@ nav {
 }
 
 
-
-
-/*video*/
-
-
-
 section {
   padding: 35px 20px;
 }
+
+/*video*/
+
 
 .home {
   padding: 35px;
@@ -126,27 +124,30 @@ section {
 
 }
 
-.home .media-icons {
+.media-icons {
   z-index: 888;
-  position: absolute;
-  right: 30px;
+  position: relative;
   display: flex;
   flex-direction: column;
   transition: 0.5s ease;
+  width: 100%;
+  top: -13rem;
+  right: 5vh;
+  align-items: end;
+  justify-content: center;
 }
 
-.home,
 .media-icons a {
   color: #fff;
   font-size: 1.6em;
   transition: 0.3s ease;
 }
 
-.home .media-icons a:not(:last-child) {
+.media-icons a:not(:last-child) {
   margin-bottom: 20px;
 }
 
-.home .media-icons a:hover {
+.media-icons a:hover {
   transform: scale(1.3);
 }
 
@@ -163,13 +164,14 @@ section {
 /*card*/
 
 .container {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 40px 0;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 40px 0;
+    padding: 35px;
 }
 
 .container .card {
@@ -298,19 +300,23 @@ section {
 
 }
 
-.about .about_main .about_text h1 span {
+.about_text {
+  width: 100%;
+  height: 50%;
+}
+
+.about_text h1 span {
   color: #c41818;
   margin-right: 15px;
   font-family: mv boli;
 }
 
-.about .about_main .about_text h1 {
+.about_text h1 {
   font-size: 55px;
   position: relative;
-  bottom: 50px;
 }
 
-.about .about_main .about_text h3 {
+.about_text h3 {
   font-size: 30;
   margin: 10px;
 }
@@ -565,7 +571,20 @@ footer {
 /*responsivo*/
 
 
-@media (max-width: 998px) {
+
+@media (max-width: 1040px) {
+
+  section {
+    padding: 100px 20px;
+  }
+
+  .home .media-icons {
+    right: 15px;
+  }
+}
+
+
+@media screen and (max-width: 998px) {
   body {
     overflow-x: hidden;
   }
@@ -623,18 +642,6 @@ footer {
   transform: rotate(45deg) translate(-5px, -7px);
 }
 
-
-@media (max-width: 1040px) {
-
-  section {
-    padding: 100px 20px;
-  }
-
-  .home .media-icons {
-    right: 15px;
-  }
-}
-
 /*footer*/
 
 @media screen and (max-width: 768px) {
@@ -644,7 +651,36 @@ footer {
     }
 }
 
-@media screen and (max-width: 42px){
+@media screen and (min-width:320px) and (max-width: 769px){
+
+  .about_main{
+    width: 100%;
+    height: 100%;
+
+  }
+
+  .row {
+    transition: all .40s;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 70%;
+    margin-left: 1rem;
+  }
+  
+  .row img{
+    width: 100%;
+    height: auto;
+    transition: all .40s;
+  }
+  
+  .row img:hover{
+    transform: scale(0.9);
+  }
+
+
+
+
   #footer_content{
     grid-template-columns: repeat(1, 1fr);
     padding: 3rem 2rem;
