--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,16 @@
   text-decoration: none;
 }
 
-.nav-list  a {
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: system-ui, -apple-system, Helvetica, sans-serif;
+  height: 8vh;
+  background-color: black;
+}
+
+.nav-list a {
   color: #fff;
   text-decoration: none;
   transition: 0, 3s;
@@ -50,7 +59,7 @@
 .mobile-menu div {
   width: 32px;
   height: 2px;
-  background: #fff;
+  background: #9b2d2d;
   margin: 8px;
   transition: 0.3s;
 }
@@ -166,14 +175,14 @@
 /*card*/
 
 .container {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 40px 0;
-    padding: 35px;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 40px 0;
+  padding: 35px;
 }
 
 .container .card {
@@ -343,21 +352,24 @@
 
 /*empresas*/
 
-#circle-shape-example { 
-  font-family: Open Sans, sans-serif; 
-  margin: 2rem; 
+#circle-shape-example {
+  font-family: Open Sans, sans-serif;
+  margin: 2rem;
 }
-#circle-shape-example p { 
-  line-height: 1.8; 
+
+#circle-shape-example p {
+  line-height: 1.8;
 }
-#circle-shape-example .curve { 
-  width: 33%; height: auto;
+
+#circle-shape-example .curve {
+  width: 33%;
+  height: auto;
   min-width: 150px;
   float: left;
-  margin-right:2rem; 
+  margin-right: 2rem;
   border-radius: 50%;
-  -webkit-shape-outside:circle();
-  shape-outside:circle();
+  -webkit-shape-outside: circle();
+  shape-outside: circle();
 }
 
 
@@ -377,7 +389,7 @@ main.cards section.card {
   background: rgb(233, 233, 233);
   padding: 1rem 1.5rem;
   border-radius: 8px;
-  max-height:  35%;
+  max-height: 35%;
   margin-left: 32px;
 }
 
@@ -421,9 +433,11 @@ main.cards section.card button {
 main.cards section.card.contact button {
   background: linear-gradient(to right, #9F66FF, #DFCBFF);
 }
+
 main.cards section.card.shop button {
   background: linear-gradient(to right, #3E8AFF, #BBDEFF);
 }
+
 main.cards section.card.slim button {
   background: linear-gradient(to right, #FE5F8F, #FFC7D9);
 }
@@ -431,9 +445,11 @@ main.cards section.card.slim button {
 main.cards section.card.contact {
   box-shadow: 20px 20px 50px -30px #DBC4FF;
 }
+
 main.cards section.card.shop {
   box-shadow: 20px 20px 50px -30px #AFD6FF;
 }
+
 main.cards section.card.slim {
   box-shadow: 20px 20px 50px -30px #FFC1D5;
 }
@@ -441,21 +457,21 @@ main.cards section.card.slim {
 /*footer*/
 
 footer main {
-   height: 80vh;
+  height: 80vh;
 }
 
 footer {
   width: 100%;
-  color:#fff;
+  color: #fff;
 }
 
 
 
-.footer-link{
+.footer-link {
   text-decoration: none;
 }
 
-#footer_content{
+#footer_content {
   background-color: #2c2c2c;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -463,20 +479,21 @@ footer {
 }
 
 #footer_contacts h1 {
-  margin-bottom: 0.7rem ;
+  margin-bottom: 0.7rem;
 }
 
-#footer_midia{
+#footer_midia {
   display: flex;
   gap: 2rem;
   margin-top: 1.5rem;
 }
-#footer_midia .footer-link i{
+
+#footer_midia .footer-link i {
   font-size: 1.25rem;
 }
 
 #footer_midia .footer-link {
-  display:flex ;
+  display: flex;
   align-items: center;
   justify-content: center;
   height: 2.5rem;
@@ -502,7 +519,7 @@ footer {
 
 #twitter {
   background-color: #0055ff;
-} 
+}
 
 .footer-list {
   display: flex;
@@ -519,7 +536,7 @@ footer {
   color: #7f37c9;
 }
 
-#footer_cadastro{
+#footer_cadastro {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -536,13 +553,13 @@ footer {
   border-radius: 4px;
 }
 
-#input_group input{
+#input_group input {
   all: unset;
   padding: 0.75rem;
   width: 100%;
 }
 
-#input_group button{
+#input_group button {
   background-color: #ccca48;
   border: none;
   color: #000000;
@@ -558,14 +575,14 @@ footer {
   opacity: 0.8;
 }
 
-#footer_copyright{
+#footer_copyright {
   display: flex;
   justify-content: center;
   background-color: #00000060;
   font-size: 0.9rem;
   padding: 1.5rem;
   font-weight: 100;
-  
+
 
 }
 
@@ -647,15 +664,15 @@ footer {
 /*footer*/
 
 @media screen and (max-width: 768px) {
-    #footer_content{
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
-    }
+  #footer_content {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
 }
 
-@media screen and (min-width:320px) and (max-width: 769px){
+@media screen and (min-width:320px) and (max-width: 769px) {
 
-  .about_main{
+  .about_main {
     width: 100%;
     height: 100%;
 
@@ -669,21 +686,21 @@ footer {
     height: 70%;
     margin-left: 1rem;
   }
-  
-  .row img{
+
+  .row img {
     width: 100%;
     height: auto;
     transition: all .40s;
   }
-  
-  .row img:hover{
+
+  .row img:hover {
     transform: scale(0.9);
   }
 
 
 
 
-  #footer_content{
+  #footer_content {
     grid-template-columns: repeat(1, 1fr);
     padding: 3rem 2rem;
   }
@@ -692,20 +709,20 @@ footer {
 /*funçoes*/
 @media screen and (max-width: 750px) {
   main.cards {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   main.cards section.card {
-      margin-left: 0;
-      margin-bottom: 32px;
+    margin-left: 0;
+    margin-bottom: 32px;
   }
 
   main.cards section.card:last-child {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 
   main.cards section.card button {
-      font-size: 70%;
+    font-size: 70%;
   }
 
 }
