--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -56,7 +56,7 @@ nav {
     background: white;
     margin: 8px;
     transition: 0.3s;
-}
+  }
   
   .nav-list section {
     padding: 35px 20px;
@@ -98,6 +98,14 @@ nav {
     .mobile-menu {
       display: block;
   
+    }
+    
+    .mobile-menu div {
+      width: 32px;
+      height: 2px;
+      background: white;
+      margin: 8px;
+      transition: 0.3s;
     }
   }
   
