--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,11 +1,18 @@
-
+main{
+  margin-top:8vh;
+}
 nav {
+    top: 0;
+    position: fixed;
+    width: 100vw;
+    z-index: 3;
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, sans-serif;
     height: 8vh;
     background-color: black;
+    margin: 0;
   }
   
   .nav-list a {
@@ -113,7 +120,7 @@ nav {
     transform: translateX(0);
   }
   
-  @keyframes navLinkFade {
+  /* @keyframes navLinkFade {
     from {
       opacity: 0;
       transform: translateX(50px);
@@ -123,7 +130,7 @@ nav {
       opacity: 1;
       transform: translateX(0);
     }
-  }
+  } */
   
   .mobile-menu.active .line1 {
     transform: rotate(-45deg) translate(-8px, 8px);
