--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 3rem 3.5rem;
+  width: 100%;
 }
 
 #footer_contacts h1 {
