--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -120,7 +120,7 @@ nav {
     transform: translateX(0);
   }
   
-  /* @keyframes navLinkFade {
+   @keyframes navLinkFade {
     from {
       opacity: 0;
       transform: translateX(50px);
@@ -130,7 +130,7 @@ nav {
       opacity: 1;
       transform: translateX(0);
     }
-  } */
+  } 
   
   .mobile-menu.active .line1 {
     transform: rotate(-45deg) translate(-8px, 8px);
