--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ ul,li,h1,h2,h3,h4,h5,ol{
   margin: 0;
 }
 
+.logo {
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-decoration: none;
+}
+
 .home {
   padding: 35px;
   position: relative;
@@ -34,6 +42,7 @@ ul,li,h1,h2,h3,h4,h5,ol{
   height: 100%;
   top: 0;
   left: 0;
+  
 
 }
 
@@ -561,6 +570,7 @@ footer {
     width: 100%;
     height: 70%;
     margin-left: 1rem;
+    justify-content: center;
   }
 
   .row img {
