--- a/css/empresa1.css
+++ b/css/empresa1.css
@@ -5,6 +5,13 @@
     text-decoration: none;
   }
 
+  /*style do cards*/
+
+
+  
+
+  /*fim do style do cards*/
+
 /*comentarios*/
 a{
     text-decoration: none;
