--- a/css/empresa1.css
+++ b/css/empresa1.css
@@ -7,23 +7,15 @@
 
   /*style do cards*/
 
-  .grupo{
-    
-    padding: 0;
-    margin: 10%;
+  .card-group{
+   height: 100%;
+    margin: 7%;
 
   }
-
-  .carta {
-    height: 100%;
-    background-color: #f9d71c;
-  }
-
-
   /*fim do style do cards*/
 
 /*comentarios*/
-a{
+#testimonials a{
     text-decoration: none;
 }
 
@@ -143,9 +135,9 @@ a{
 
 /*fim do maps*/
 
-/*fim do maps*/
+/*form*/
 .form {
 
-    display: flex;
+  width: 10%;
 }
-/*fim do maps*/
+/*fim do form */
