--- a/css/empresa1.css
+++ b/css/empresa1.css
@@ -3,23 +3,24 @@
     padding: 0;
     font-family: poppins;
     text-decoration: none;
-  }
+}
 
-  /*style do cards*/
+/*style do cards*/
 
-  .card-group{
-   height: 100%;
+.card-group {
+    height: 100%;
     margin: 7%;
 
-  }
-  /*fim do style do cards*/
+}
+
+/*fim do style do cards*/
 
 /*comentarios*/
-#testimonials a{
+#testimonials a {
     text-decoration: none;
 }
 
-#testimonials{
+#testimonials {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +28,7 @@
     width: 100%;
 }
 
-.testimonial-heading{
+.testimonial-heading {
     letter-spacing: 1px;
     margin: 30px;
     padding: 10px 20px;
@@ -40,7 +41,7 @@
 .testimonial-heading h1 {
     font-size: 2.2rem;
     font-weight: 500;
-    background-color: #202020 ;
+    background-color: #202020;
     color: #ffff;
     padding: 10px 20px;
 }
@@ -61,9 +62,9 @@
     width: 100%;
 }
 
-.testimonial-box{
+.testimonial-box {
     width: 500px;
-    box-shadow: 2px 2px 30px rgb(0,0,0,0.1);
+    box-shadow: 2px 2px 30px rgb(0, 0, 0, 0.1);
     background-color: #ffffff;
     padding: 20px;
     margin: 15px;
@@ -79,7 +80,7 @@
     margin-right: 10px;
 }
 
-.profile-img img{
+.profile-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -91,7 +92,7 @@
     align-items: center;
 }
 
-.name-user{
+.name-user {
     display: flex;
     flex-direction: column;
 }
@@ -118,7 +119,7 @@
     margin-bottom: 20px;
 }
 
-.client-comment p{
+.client-comment p {
     font-size: 0.9rem;
     color: #4b4b4b;
 
@@ -126,22 +127,25 @@
 
 /*fim do comentarios*/
 
-.subpe{
-    display: flex;
-}
+
+
 /*maps*/
-.maps{
-    padding: 5%;
-}
+
+
 
 /*fim do maps*/
 
 /*form*/
 .form {
-  width: 10%;
+    padding: 10%;
+    width: 50%;
 }
-.form .title  {
+
+
+.form .title {
     background-color: #000000;
     z-index: 888;
+    width: 10%;
 }
+
 /*fim do form */
