--- a/css/style.css
+++ b/css/style.css
@@ -101,11 +101,11 @@ ul,li,h1,h2,h3,h4,h5,ol{
   display: flex;
   flex-direction: column;
   transition: 0.5s ease;
-  width: 100%;
+  width: 10%;
   top: -13rem;
   right: 5vh;
   align-items: end;
-  justify-content: center;
+  margin-left: 90%
 }
 
 .media-icons a {
