--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ ul,li,h1,h2,h3,h4,h5,ol{
   z-index: 777;
   content: '';
   position: absolute;
-  background: #33333348;
+  background: rgba(3, 3, 3, 0.342);
   width: 100%;
   height: 100%;
   top: 0;
@@ -233,7 +233,11 @@ ul,li,h1,h2,h3,h4,h5,ol{
 
 /*barra das ongs*/
 
-.about {
+.p-5{
+  color: #9F66FF;
+}
+
+/*.about {
   width: 100vw;
   height: 100%;
   display: flex;
@@ -300,9 +304,9 @@ ul,li,h1,h2,h3,h4,h5,ol{
 .about .about_btn {
   background: #c41818;
   width: 100%;
-}
+}*/
 
-/*empresas*/
+/*empresas
 
 #circle-shape-example {
   font-family: Open Sans, sans-serif;
@@ -322,7 +326,7 @@ ul,li,h1,h2,h3,h4,h5,ol{
   border-radius: 50%;
   -webkit-shape-outside: circle();
   shape-outside: circle();
-}
+}*/
 
 
 /*card*/
