--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -11,7 +11,7 @@ nav {
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, sans-serif;
     height: 8vh;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     margin: 0;
   }
   
@@ -37,7 +37,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: #000;
+    background: #000000;
     height: 8vh;
   }
   
