--- a/LOGIN/style.css
+++ b/LOGIN/style.css
@@ -11,6 +11,14 @@ input {
   font-family: "Poppins", sans-serif;
 }
 
+.ver-senha {
+  width: 100%;
+  padding: 15px;
+}
+.ver-senha input{
+  border-radius: 50%;
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -150,6 +158,7 @@ form.sign-in-form {
 .btn:hover {
   background-color: #4d84e2;
 }
+
 .panels-container {
   position: absolute;
   height: 100%;
@@ -275,6 +284,7 @@ form.sign-in-form {
     min-height: 800px;
     height: 100vh;
   }
+
   .signin-signup {
     width: 100%;
     top: 95%;
@@ -381,9 +391,11 @@ form.sign-in-form {
   .image {
     display: none;
   }
+
   .panel .content {
     padding: 0.5rem 1rem;
   }
+
   .container {
     padding: 1.5rem;
   }
