--- a/css/footer-principal.css
+++ b/css/footer-principal.css
@@ -20,7 +20,7 @@ footer main {
     grid-template-columns: repeat(4, 1fr);
     padding: 3rem 3.5rem;
     width: 100%;
-    
+     margin-left: 2rem;
   }
   
   #footer_contacts h1 {
@@ -137,6 +137,9 @@ footer main {
     #footer_content {
       grid-template-columns: repeat(2, 1fr);
       gap: 2rem;
+      margin-left: 0;
+      margin-bottom: 2rem;
+    }
   }
   
   @media screen and (min-width:320px) and (max-width: 769px) {
@@ -174,5 +177,4 @@ footer main {
       grid-template-columns: repeat(1, 1fr);
       padding: 3rem 2rem;
     }
-  }}
-  
+  }
