--- a/css/principal.css
+++ b/css/principal.css
@@ -21,12 +21,13 @@
 
 /*serviços*/
 .container-fluid {
+    width: 70%; 
     display: flex;
-    justify-content: center;
     margin: 40px 0;
     padding: 35px;
+    margin-left: 10%;
     overflow: auto;
-    
+    margin-right: 10%;
   }
   .container-fluid ::-webkit-scrollbar{
     width: 0;
@@ -45,8 +46,7 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(10px);
- 
-    z-index: 0;
+ z-index: 0;
   }
   
   .card .content {
