--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,7 +1,11 @@
+
+
+
 main{
   margin-top:8vh;
 }
 nav {
+  
     top: 0;
     position: fixed;
     width: 100vw;
@@ -11,7 +15,7 @@ nav {
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, sans-serif;
     height: 8vh;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(246, 158, 43);
     margin: 0;
   }
   
@@ -30,6 +34,7 @@ nav {
     font-size: 24px;
     text-transform: uppercase;
     letter-spacing: 4px;
+    text-decoration: none;
   }
   
   .nav-list nav {
@@ -89,7 +94,7 @@ nav {
       right: 0;
       width: 50vw;
       height: 92vh;
-      background: #000;
+      background-color: rgb(246, 158, 43);
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
