--- a/css/menu.css
+++ b/css/menu.css
@@ -20,6 +20,8 @@ nav.menu-lateral {
     border-right: 3px solid #6092ff;
     overflow: hidden;
     transition: .5s;
+    width: 150%;
+
     
 }
 
@@ -112,6 +114,7 @@ ul li.item-menu a .icon>i {
         
         overflow: hidden;
         transition: .5s;
+        width: 100%;
     }
 
     .menu-itens {
