--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -31,42 +31,7 @@ section {
   padding: 5rem 9%;
 }
 
-.btn {
-  display: inline-block;
-  margin-top: 1rem;
-  padding: 2rem 2.8rem;
-  border-radius: 5rem;
-  border-top-left-radius: 0;
-  border: 2rem solid var(--Preto);
-  cursor: pointer;
-  background: none;
-  color: var(--Preto);
-  font-size: 1.7rem;
-  overflow: hidden;
-  z-index: 0;
-  position: relative;
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: var(--Preto);
-    z-index: 1;
-    transition: .2s linear;
-    clip-path: circle(0% at 0% 5%);
-  }
-
-  &:hover::before {
-    clip-path: circle(100%);
-  }
-
-  &:hover {
-    color: var(--Cinza);
-  }
-}
 
 
 
@@ -75,22 +40,6 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 4rem;
 }
-
-&::-webkit-scrollbar {
-  width: 1rem;
-}
-
-&::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-&::-webkit-scrollbar-thumb {
-  background: var(--Azul);
-  border-radius: 5rem;
-}
-
-
-
 
 .header {
   background: var(--Branco);
@@ -105,47 +54,55 @@ html {
   z-index: 1000;
   transform: translateY(-10rem, );
   box-shadow: 0 .3rem 1.5rem rgb(82, 82, 82);
+}
 
 
-  &:active {
+/*.header &::active {
+    transform: translateY(0rem);
+  } Estudar*/
+
+  .header:active {
     transform: translateY(0rem);
   }
 
 
-  .logo {
+  .header .logo {
     font-size: 2.5rem;
     color: var(--Preto);
     font-weight: bolder;
+  }
 
-    i {
+    .header .logo i {
       color: var(--Azul);
       padding: 1rem;
     }
-  }
+  
 
   .navbar a {
     margin: 0.1rem;
     font-size: 1.7rem;
     color: var(--CinzaEscuro);
-    padding: 0.8rem;
+    padding: 0.8rem;}
+    
 
-    &:hover {
+    .navbar a:hover {
       color: var(--Amarelo);
     }
-  }
+  
 
   .icons a,
   .icons div {
     font-size: 2.5rem;
     margin-left: 1.5rem;
     color: var(--Preto);
-    cursor: pointer;
+    cursor: pointer; }
 
-    &:hover {
+    .icons a,
+    .icons div :hover {
       color: var(--Amarelo);
     }
-  }
-}
+  
+
 
 #menu-btn {
   display: none;
@@ -160,25 +117,41 @@ html {
   background-position: center;
   background-size: cover;
   position: relative;
+}
 
-  .content {
+.home .content {
     width: 50rem;
+}
 
-    h3 {
+    .home .content h3 {
       font-size: 6rem;
       color: var(--Cinza);
       padding-bottom: 1rem;
+    }
 
-      span {
+      .home .content h3 span {
         color: var(--Amarelo);
       }
-    }
+    
 
-    .btn {
+      .home .content .btn {
       color: var(--Branco);
       border: 1rem solid var(--Branco);
-    }
-  }
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 2rem 2rem;
+      border-radius: 5rem;
+      border-top-left-radius: 0;
+      border: 1rem solid var(--Branco);
+      cursor: pointer;
+      background: none;
+      color: var(--Amarelo);
+      font-size: 1.7rem;
+      overflow: hidden;
+      z-index: 0;
+      position: relative;
+      }
+  
 
   .wave {
     position: absolute;
@@ -188,7 +161,7 @@ html {
     height: 12rem;
   }
 
-}
+
 
 /* serviços */
 
@@ -245,6 +218,23 @@ h2 {
   padding: 1em;
   border-radius: 30px;
 }
+.cat-card:nth-last-of-type(2){
+  background: linear-gradient(180deg, rgba(108, 198, 63, 0)0%, rgba(108, 198, 63, 0)100%);
+} 
+.cat-card:nth-last-of-type(3){
+  background: linear-gradient(180deg, rgba(108, 198, 63, 0)0%, rgba(108, 198, 63, 0)100%);
+}
+.cat-card:nth-last-of-type(4){
+  background: linear-gradient(180deg, rgba(108, 198, 63, 0)0%, rgba(108, 198, 63, 0)100%);
+}
+.cat-card:nth-last-of-type(5){
+  background: linear-gradient(180deg, rgba(108, 198, 63, 0)0%, rgba(108, 198, 63, 0)100%);
+}
+.cat-card:nth-last-of-type(6){
+  background: linear-gradient(180deg, rgba(108, 198, 63, 0)0%, rgba(108, 198, 63, 0)100%);
+}
+
+
 
 .cat-card h6 {
   font-size: 18px;
@@ -263,38 +253,81 @@ h2 {
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
+}
 
 
-  .image {
+  .about .image {
     flex: 1 1 40rem;
-
-    img {
-      width: 100%;
-    }
   }
 
-  .content {
+  .about .image  img {
+      width: 100%;
+    }
+  
+
+    .about .content {
     flex: 1 1 40rem;
-
-    h3 {
-      color: var(--Preto);
-      font-size: 4rem;
-
-      span {
-        color: var(--Amarelo);
-      }
     }
 
-    p {
+    .about .content h3 {
+      color: var(--Preto);
+      font-size: 4rem;
+    }
+
+    .about .content h3 span {
+        color: var(--Amarelo);
+      }
+
+      .about .content   p {
       font-size: 1.6rem;
       color: var(--CinzaEscuro);
       padding: 1rem 0;
       line-height: 2;
     }
-  }
+    .about .content .btn{
+      color: var(--Branco);
+      border: 1rem solid var(--Branco);
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 2rem 2rem;
+      border-radius: 5rem;
+      border-top-left-radius: 0;
+      border: 1rem solid var(--Azul);
+      cursor: pointer;
+      background: none;
+      color: var(--Azul);
+      font-size: 1.7rem;
+      overflow: hidden;
+      z-index: 0;
+      position: relative;
+    }
+
+
+    
+/* planos*/
+.planos {
+  width: 900px;
+  margin: 5% auto;
 }
 
+.planos-base{
+  width: 33%;
+  background: #262626;
+  margin-top: 2%;
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  transition: 0.9s;
+}
 
+.preco{
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 2px solid #da4357;
+  margin: 5% auto 0 auto;
+  text-align: center;
+
+}
 
 
 
@@ -321,45 +354,42 @@ h2 {
     background-position: right;
   }
 
-  .content {
+  .about.content {
     text-align: center;
     padding-bottom: 5rem;
+  }
 
-    h3 {
+    .about .content h3 {
       font-size: 4.5rem;
     }
   }
-}
 
 @media (max-width: 768px) {
 
-  #menu-btn {
+  .header .icons #menu-btn {
     display: inline-block;
   }
 
-  .header {
-
-    .navbar {
+  .header .navbar {
       position: absolute;
       top: 99%;
       left: 0;
       right: 0;
       background: var(--Branco);
       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
 
-      &.active {
+  .header .navbar:hover  {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
       }
 
-      a {
+      .header .navbar a {
         display: block;
         margin: 2rem;
         font-size: 2rem;
       }
     }
-  }
 
-}
 
 @media (max-width: 450px) {
 
